added backend for phonebook

--- a/part3/phonebook_backend/package.json
+++ b/part3/phonebook_backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "phonebook_backend",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -10,6 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
-  }
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  },
+  "keywords": [],
+  "description": ""
 }
