--- a/part3/phonebook_backend/package.json
+++ b/part3/phonebook_backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "phonebook_backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -10,10 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongoose": "^8.15.0",
+    "mongoose-unique-validator": "^4.0.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "eslint": "^9.27.0",
     "nodemon": "^3.1.10"
   },
   "keywords": [],
